; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/nbtree/extr_nbtsearch.c__bt_steppage.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/nbtree/extr_nbtsearch.c__bt_steppage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_15__ = type { i32*, i32 }
%struct.TYPE_16__ = type { i64, i32, %struct.TYPE_18__, %struct.TYPE_17__, %struct.TYPE_18__*, %struct.TYPE_17__* }
%struct.TYPE_18__ = type { i32, i32, i32, i32, i32, i64, i32 }
%struct.TYPE_17__ = type { i32 }

@InvalidBlockNumber = common dso_local global i32 0, align 4
@BTScanPosData = common dso_local global i32 0, align 4
@items = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_15__*, i32)* @_bt_steppage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_bt_steppage(%struct.TYPE_15__* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_15__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_16__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.TYPE_15__* %0, %struct.TYPE_15__** %4, align 8
  store i32 %1, i32* %5, align 4
  %9 = load %struct.TYPE_15__*, %struct.TYPE_15__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = sext i32 %11 to i64
  %13 = inttoptr i64 %12 to %struct.TYPE_16__*
  store %struct.TYPE_16__* %13, %struct.TYPE_16__** %6, align 8
  %14 = load i32, i32* @InvalidBlockNumber, align 4
  store i32 %14, i32* %7, align 4
  store i32 1, i32* %8, align 4
  %15 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %16 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %15, i32 0, i32 2
  %17 = call i32 @BTScanPosIsValid(%struct.TYPE_18__* byval(%struct.TYPE_18__) align 8 %16)
  %18 = call i32 @Assert(i32 %17)
  %19 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %20 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp sgt i64 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %2
  %24 = load %struct.TYPE_15__*, %struct.TYPE_15__** %4, align 8
  %25 = call i32 @_bt_killitems(%struct.TYPE_15__* %24)
  br label %26

26:                                               ; preds = %23, %2
  %27 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %28 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 8
  %30 = icmp sge i32 %29, 0
  br i1 %30, label %31, label %85

31:                                               ; preds = %26
  %32 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %33 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %32, i32 0, i32 2
  %34 = call i64 @BTScanPosIsPinned(%struct.TYPE_18__* byval(%struct.TYPE_18__) align 8 %33)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %42

36:                                               ; preds = %31
  %37 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %38 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %37, i32 0, i32 2
  %39 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %38, i32 0, i32 6
  %40 = load i32, i32* %39, align 8
  %41 = call i32 @IncrBufferRefCount(i32 %40)
  br label %42

42:                                               ; preds = %36, %31
  %43 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %44 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %43, i32 0, i32 3
  %45 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %46 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %45, i32 0, i32 2
  %47 = load i32, i32* @BTScanPosData, align 4
  %48 = load i32*, i32** @items, align 8
  %49 = getelementptr inbounds i32, i32* %48, i64 1
  %50 = load i32, i32* %49, align 4
  %51 = call i64 @offsetof(i32 %47, i32 %50)
  %52 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %53 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %52, i32 0, i32 2
  %54 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %53, i32 0, i32 0
  %55 = load i32, i32* %54, align 8
  %56 = sext i32 %55 to i64
  %57 = mul i64 %56, 4
  %58 = add i64 %51, %57
  %59 = call i32 @memcpy(%struct.TYPE_17__* %44, %struct.TYPE_18__* %46, i64 %58)
  %60 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %61 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %60, i32 0, i32 5
  %62 = load %struct.TYPE_17__*, %struct.TYPE_17__** %61, align 8
  %63 = icmp ne %struct.TYPE_17__* %62, null
  br i1 %63, label %64, label %76

64:                                               ; preds = %42
  %65 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %66 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %65, i32 0, i32 5
  %67 = load %struct.TYPE_17__*, %struct.TYPE_17__** %66, align 8
  %68 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %69 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %68, i32 0, i32 4
  %70 = load %struct.TYPE_18__*, %struct.TYPE_18__** %69, align 8
  %71 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %72 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %71, i32 0, i32 2
  %73 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %72, i32 0, i32 5
  %74 = load i64, i64* %73, align 8
  %75 = call i32 @memcpy(%struct.TYPE_17__* %67, %struct.TYPE_18__* %70, i64 %74)
  br label %76

76:                                               ; preds = %64, %42
  %77 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %78 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %77, i32 0, i32 1
  %79 = load i32, i32* %78, align 8
  %80 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %81 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %80, i32 0, i32 3
  %82 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %81, i32 0, i32 0
  store i32 %79, i32* %82, align 8
  %83 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %84 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %83, i32 0, i32 1
  store i32 -1, i32* %84, align 8
  br label %85

85:                                               ; preds = %76, %26
  %86 = load i32, i32* %5, align 4
  %87 = call i64 @ScanDirectionIsForward(i32 %86)
  %88 = icmp ne i64 %87, 0
  br i1 %88, label %89, label %119

89:                                               ; preds = %85
  %90 = load %struct.TYPE_15__*, %struct.TYPE_15__** %4, align 8
  %91 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %90, i32 0, i32 0
  %92 = load i32*, i32** %91, align 8
  %93 = icmp ne i32* %92, null
  br i1 %93, label %94, label %107

94:                                               ; preds = %89
  %95 = load %struct.TYPE_15__*, %struct.TYPE_15__** %4, align 8
  %96 = call i32 @_bt_parallel_seize(%struct.TYPE_15__* %95, i32* %7)
  store i32 %96, i32* %8, align 4
  %97 = load i32, i32* %8, align 4
  %98 = icmp ne i32 %97, 0
  br i1 %98, label %106, label %99

99:                                               ; preds = %94
  %100 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %101 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %100, i32 0, i32 2
  %102 = call i32 @BTScanPosUnpinIfPinned(%struct.TYPE_18__* byval(%struct.TYPE_18__) align 8 %101)
  %103 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %104 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %103, i32 0, i32 2
  %105 = call i32 @BTScanPosInvalidate(%struct.TYPE_18__* byval(%struct.TYPE_18__) align 8 %104)
  store i32 0, i32* %3, align 4
  br label %158

106:                                              ; preds = %94
  br label %112

107:                                              ; preds = %89
  %108 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %109 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %108, i32 0, i32 2
  %110 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %109, i32 0, i32 4
  %111 = load i32, i32* %110, align 8
  store i32 %111, i32* %7, align 4
  br label %112

112:                                              ; preds = %107, %106
  %113 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %114 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %113, i32 0, i32 2
  %115 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %114, i32 0, i32 1
  store i32 1, i32* %115, align 4
  %116 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %117 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %116, i32 0, i32 2
  %118 = call i32 @BTScanPosUnpinIfPinned(%struct.TYPE_18__* byval(%struct.TYPE_18__) align 8 %117)
  br label %146

119:                                              ; preds = %85
  %120 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %121 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %120, i32 0, i32 2
  %122 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %121, i32 0, i32 2
  store i32 1, i32* %122, align 8
  %123 = load %struct.TYPE_15__*, %struct.TYPE_15__** %4, align 8
  %124 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %123, i32 0, i32 0
  %125 = load i32*, i32** %124, align 8
  %126 = icmp ne i32* %125, null
  br i1 %126, label %127, label %140

127:                                              ; preds = %119
  %128 = load %struct.TYPE_15__*, %struct.TYPE_15__** %4, align 8
  %129 = call i32 @_bt_parallel_seize(%struct.TYPE_15__* %128, i32* %7)
  store i32 %129, i32* %8, align 4
  %130 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %131 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %130, i32 0, i32 2
  %132 = call i32 @BTScanPosUnpinIfPinned(%struct.TYPE_18__* byval(%struct.TYPE_18__) align 8 %131)
  %133 = load i32, i32* %8, align 4
  %134 = icmp ne i32 %133, 0
  br i1 %134, label %139, label %135

135:                                              ; preds = %127
  %136 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %137 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %136, i32 0, i32 2
  %138 = call i32 @BTScanPosInvalidate(%struct.TYPE_18__* byval(%struct.TYPE_18__) align 8 %137)
  store i32 0, i32* %3, align 4
  br label %158

139:                                              ; preds = %127
  br label %145

140:                                              ; preds = %119
  %141 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %142 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %141, i32 0, i32 2
  %143 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %142, i32 0, i32 3
  %144 = load i32, i32* %143, align 4
  store i32 %144, i32* %7, align 4
  br label %145

145:                                              ; preds = %140, %139
  br label %146

146:                                              ; preds = %145, %112
  %147 = load %struct.TYPE_15__*, %struct.TYPE_15__** %4, align 8
  %148 = load i32, i32* %7, align 4
  %149 = load i32, i32* %5, align 4
  %150 = call i32 @_bt_readnextpage(%struct.TYPE_15__* %147, i32 %148, i32 %149)
  %151 = icmp ne i32 %150, 0
  br i1 %151, label %153, label %152

152:                                              ; preds = %146
  store i32 0, i32* %3, align 4
  br label %158

153:                                              ; preds = %146
  %154 = load %struct.TYPE_15__*, %struct.TYPE_15__** %4, align 8
  %155 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %156 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %155, i32 0, i32 2
  %157 = call i32 @_bt_drop_lock_and_maybe_pin(%struct.TYPE_15__* %154, %struct.TYPE_18__* %156)
  store i32 1, i32* %3, align 4
  br label %158

158:                                              ; preds = %153, %152, %135, %99
  %159 = load i32, i32* %3, align 4
  ret i32 %159
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @BTScanPosIsValid(%struct.TYPE_18__* byval(%struct.TYPE_18__) align 8) #1

declare dso_local i32 @_bt_killitems(%struct.TYPE_15__*) #1

declare dso_local i64 @BTScanPosIsPinned(%struct.TYPE_18__* byval(%struct.TYPE_18__) align 8) #1

declare dso_local i32 @IncrBufferRefCount(i32) #1

declare dso_local i32 @memcpy(%struct.TYPE_17__*, %struct.TYPE_18__*, i64) #1

declare dso_local i64 @offsetof(i32, i32) #1

declare dso_local i64 @ScanDirectionIsForward(i32) #1

declare dso_local i32 @_bt_parallel_seize(%struct.TYPE_15__*, i32*) #1

declare dso_local i32 @BTScanPosUnpinIfPinned(%struct.TYPE_18__* byval(%struct.TYPE_18__) align 8) #1

declare dso_local i32 @BTScanPosInvalidate(%struct.TYPE_18__* byval(%struct.TYPE_18__) align 8) #1

declare dso_local i32 @_bt_readnextpage(%struct.TYPE_15__*, i32, i32) #1

declare dso_local i32 @_bt_drop_lock_and_maybe_pin(%struct.TYPE_15__*, %struct.TYPE_18__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
